--- a/css/application.css
+++ b/css/application.css
@@ -6,6 +6,7 @@
 @import "./nav.css";
 @import "./bg-cta";
 @import "./cart-drawer";
+@import "./accordion";
 /* purgecss start ignore */
 @tailwind base;
 /* purgecss end ignore */
