--- a/snippets/12-down.liquid
+++ b/snippets/12-down.liquid
@@ -1,3 +1,4 @@
-<svg width="12" height="8" viewBox="0 0 12 8" fill="none" xmlns="http://www.w3.org/2000/svg" class="{{ class }}">
-<path d="M1.5 2L6 6L10.5 2" stroke="currentColor" stroke-width="2" stroke-miterlimit="10" stroke-linecap="square"/>
+<svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg" class="{{ class }}">
+  <path class="left" d="M1.5 5L6 9" stroke="currentColor" stroke-width="{% if strokeWidth %}{{strokeWidth}}{% else %}2{% endif %}" stroke-miterlimit="10" stroke-linecap="square"/>
+  <path class="right" d="M6 9L10.5 5" stroke="currentColor" stroke-width="{% if strokeWidth %}{{strokeWidth}}{% else %}2{% endif %}" stroke-miterlimit="10" stroke-linecap="square"/>
 </svg>
